
# Copyright (c) 2021 linkboy
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("main") {
    sources = [
        "main.c",

        "remo/remo_driver/remo_CC_NULL.c",
        "remo/remo_driver/remo_I2C.c",
        "remo/remo_driver/remo_SHT1106_DCSPI.c",
        "remo/remo_driver/remo_SHT1106_I2C.c",
        "remo/remo_driver/remo_SoftDelay.c",
        "remo/remo_driver/remo_ST7789.c",
        "remo/remo_driver/remo_ST7920.c",
        "remo/remo_driver/remo_tick.c",

        "remo/proto.c",
        "remo/remo_Device_hi3861.c",
        "remo/VM.c",
    ]

    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/peripheral/interfaces/kits",

        "remo",
        "remo/remo_driver",


        "//base/iot_hardware/interfaces/kits/wifiiot_lite",
        "//vendor/hisi/hi3861/hi3861/third_party/lwip_sack/include/",
        "//foundation/communication/wifi_lite/interfaces/wifiservice/",
        "//device/hisilicon/hispark_pegasus/sdk_liteos/third_party/lwip_sack/include/lwip",
    ]
}
